# enhancing-long-context-utilization-in-llms-biu

./: .gitignore  LICENSE  README.md  data.md  main.py  pyproject.toml
common/: consts.py  nq_data.py  utils.py
entities/: document.py  enums.py
scripts/add_uuid_to_base_data/: run.py
scripts/calc_dataset_stats/: run.py
scripts/create_plotting_res_data/: run.py
scripts/filter_dataset/: run.py
scripts/get_dataset_statistics/: run.py
src/: args.py  metrics.py  prompt_builder.py
src/entities/: base.py  document.py  dto.py  enums.py
src/entities/experiments/: results.py
src/entities/experiments/gold_idx_change/: data.py  results.py
src/helpers/: nq_data.py
src/tasks/: abstract.py  abstract_task.py
src/tasks/gold_idx_change/: __init__.py
src/tasks/gold_idx_change/dataset_creation/: __init__.py  configs.py  create_dataset.py  dataset_creation.py
src/tasks/gold_idx_change/experiment/: __init__.py  configs.py  gold_idx_change.py
src/tasks/gold_idx_change_experimant/: __init__.py  configs.py  gold_idx_change_experiment.py
src/tasks/num_docs_increnet/: __init__.py
src/tasks/num_docs_increnet/experiment/: __init__.py  configs.py  num_docs_increment.py
src/wrappers/: __init__.py  hf_tokenizer.py  vllm.py
tests/: conftest.py  test_nq_data.py  test_nq_data_helper.py
tests/results/: get_golden_idx_change_data_baseline.json  get_golden_idx_change_data_closedbook.json  get_golden_idx_change_data_openbook.json  read_data_file_baseline.json  read_data_file_closedbook.json  read_data_file_openbook.json
