[project]
name = "enhancing-long-context-utilization-in-llms-biu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.4",
    "transformers>=4.57.1",
    "vllm==0.8.4",
    "xopen>=2.0.2",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
