[project]
name = "enhancing-long-context-utilization-in-llms-biu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "setuptools>=80.9.0",
    "torch==2.6.0",
    "transformers==4.51.3",
    "vllm==0.8.4",
    "xopen>=2.0.2",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
